not working on WP2905

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=validate
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/bookstore
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.initialization-mode=always
@@ -24,3 +24,6 @@ spring.jpa.properties.javax.persistence.schema-generation.create-database-tables
 
 #Load Data
 spring.jpa.properties.javax.persistence.sql-load-script-source=data.sql
+
+server.port=8080
+server.servlet.context-path=/bookstore
