article controller works

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.platform=postgresql
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create-drop
 
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/bookstore
@@ -27,3 +27,23 @@ spring.jpa.properties.javax.persistence.sql-load-script-source=data.sql
 
 server.port=8080
 server.servlet.context-path=/bookstore
+
+# logging level
+logging.level.org.springframework=ERROR
+logging.level.com.realdolmen.bookstore = DEBUG
+
+# output to a file
+logging.file.name=app.log
+
+# temp folder example
+#logging.file=${java.io.tmpdir}/app.log
+
+logging.pattern.file=%d %p %c{1.} [%t] %m%n
+
+logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
+
+## if no active profile, default is 'default'
+##spring.profiles.active=prod
+
+# root level
+#logging.level.=INFO
