--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.platform=postgresql
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
 
 
@@ -19,6 +19,7 @@ spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=
 
 #Generate Database
 spring.jpa.properties.javax.persistence.schema-generation.database.action=drop-and-create
+spring.jpa.properties.javax.persistence.schema-generation.create-script-source=create.sql
 spring.jpa.properties.javax.persistence.schema-generation.create-database-schemas=true
 spring.jpa.properties.javax.persistence.schema-generation.create-database-tables=true
 
