edit-article validation-take5

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 HELP.
 bookstore-front/e2e
 bookstore-front/node_modules
+bookstore-front/node/
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
