--- a/bookstore-front/POM.xml
+++ b/bookstore-front/POM.xml
@@ -22,8 +22,8 @@
         <artifactId>frontend-maven-plugin</artifactId>
         <version>1.10.0</version>
         <configuration>
-          <nodeVersion>v8.9.0</nodeVersion>
-          <yarnVersion>v1.3.2</yarnVersion>
+          <nodeVersion>v12.16.3</nodeVersion>
+          <npmVersion>v6.13.7</npmVersion>
         </configuration>
 
         <executions>
@@ -48,6 +48,15 @@
             </goals>
             <configuration>
               <arguments>run build</arguments>
+            </configuration>
+          </execution>
+          <execution>
+            <id>npm run start</id>
+            <goals>
+              <goal>npm</goal>
+            </goals>
+            <configuration>
+              <arguments>run start</arguments>
             </configuration>
           </execution>
 
