--- a/bstore-server/src/main/resources/application.properties
+++ b/bstore-server/src/main/resources/application.properties
@@ -11,11 +11,11 @@ spring.datasource.initialization-mode=always
 
 
 #create SQL from Entity Metadata only, don't use scripts
-#spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
 
 #Create SQL script from Entity
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=schema.sql
+spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=schema.sql
 
 #Generate Database
 spring.jpa.properties.javax.persistence.schema-generation.database.action=drop-and-create
