--- a/bstore-server/src/test/resources/application.properties
+++ b/bstore-server/src/test/resources/application.properties
@@ -18,7 +18,7 @@ spring.jpa.properties.jdbc.driverClassName=org.h2.Driver
 #spring.jpa.properties.jdbc.url=jdbc:h2:mem:myDb;DB_CLOSE_DELAY=-1
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.properties.hibernate.hbm2ddl.auto=create
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 #create SQL from Entity Metadata only, don't use scripts
@@ -29,10 +29,10 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=schema.sql
 
 #Generate Database
-#spring.jpa.properties.javax.persistence.schema-generation.database.action=drop-and-create
-#spring.jpa.properties.javax.persistence.schema-generation.create-script-source=create.sql
-#spring.jpa.properties.javax.persistence.schema-generation.create-database-schemas=true
-#spring.jpa.properties.javax.persistence.schema-generation.create-database-tables=true
+spring.jpa.properties.javax.persistence.schema-generation.database.action=drop-and-create
+spring.jpa.properties.javax.persistence.schema-generation.create-script-source=create.sql
+spring.jpa.properties.javax.persistence.schema-generation.create-database-schemas=true
+spring.jpa.properties.javax.persistence.schema-generation.create-database-tables=true
 
 #Load Data
 #spring.jpa.properties.javax.persistence.sql-load-script-source=data.sql
