--- a/bstore-server/src/main/resources/application.properties
+++ b/bstore-server/src/main/resources/application.properties
@@ -18,10 +18,15 @@ spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=schema.sql
 
 #Generate Database
-spring.jpa.properties.javax.persistence.schema-generation.database.action=drop-and-create
+spring.jpa.properties.javax.persistence.schema-generation.database.action=validate
 spring.jpa.properties.javax.persistence.schema-generation.create-script-source=create.sql
 spring.jpa.properties.javax.persistence.schema-generation.create-database-schemas=true
 spring.jpa.properties.javax.persistence.schema-generation.create-database-tables=true
+#spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
 
 #Load Data
 spring.jpa.properties.javax.persistence.sql-load-script-source=data.sql
