--- a/bstore-front/package.json
+++ b/bstore-front/package.json
@@ -26,6 +26,7 @@
     "@ngrx/store": "^9.1.2",
     "@ngrx/store-devtools": "^9.1.2",
     "isbnjs": "^0.2.2",
+    "moment": "^2.29.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
