--- a/bstore-server/src/main/resources/application.properties
+++ b/bstore-server/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.initialization-mode=always
 
 
 #create SQL from Entity Metadata only, don't use scripts
-spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata-then-script
 
 #Create SQL script from Entity
 spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
@@ -22,7 +22,7 @@ spring.jpa.properties.javax.persistence.schema-generation.database.action=valida
 spring.jpa.properties.javax.persistence.schema-generation.create-script-source=create.sql
 spring.jpa.properties.javax.persistence.schema-generation.create-database-schemas=true
 spring.jpa.properties.javax.persistence.schema-generation.create-database-tables=true
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
