--- a/bstore-server/src/test/resources/application.properties
+++ b/bstore-server/src/test/resources/application.properties
@@ -22,7 +22,7 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 #create SQL from Entity Metadata only, don't use scripts
-#spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
 
 #Create SQL script from Entity
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
@@ -35,7 +35,7 @@ spring.jpa.properties.javax.persistence.schema-generation.create-database-schema
 spring.jpa.properties.javax.persistence.schema-generation.create-database-tables=true
 
 #Load Data
-#spring.jpa.properties.javax.persistence.sql-load-script-source=data.sql
+spring.jpa.properties.javax.persistence.sql-load-script-source=data.sql
 #
 #server.port=8081
 #server.servlet.context-path=/bookstore
