--- a/bstore-server/src/main/resources/application.properties
+++ b/bstore-server/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.initialization-mode=always
 
 
 #create SQL from Entity Metadata only, don't use scripts
-spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata-then-script
+spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
 
 #Create SQL script from Entity
 spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
