--- a/bstore-server/src/main/resources/application.properties
+++ b/bstore-server/src/main/resources/application.properties
@@ -11,19 +11,19 @@ spring.datasource.initialization-mode=always
 
 
 #create SQL from Entity Metadata only, don't use scripts
-spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+spring.jpa.properties.javax.persistence.schema-generation.create-source=script
 
 #Create SQL script from Entity
-spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
-spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=schema.sql
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=schema.sql
 
 #Generate Database
-spring.jpa.properties.javax.persistence.schema-generation.database.action=drop-and-create
+spring.jpa.properties.javax.persistence.schema-generation.database.action=create
 spring.jpa.properties.javax.persistence.schema-generation.create-script-source=create.sql
 spring.jpa.properties.javax.persistence.schema-generation.create-database-schemas=true
 spring.jpa.properties.javax.persistence.schema-generation.create-database-tables=true
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=false
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
