--- a/bstore-front/package.json
+++ b/bstore-front/package.json
@@ -25,6 +25,8 @@
     "@ngrx/entity": "^9.1.2",
     "@ngrx/store": "^9.1.2",
     "@ngrx/store-devtools": "^9.1.2",
+    "isbn-validate": "^1.0.3",
+    "isbn-validator": "^1.2.0",
     "isbnjs": "^0.2.2",
     "moment": "^2.29.1",
     "rxjs": "~6.5.4",
@@ -40,6 +42,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.12.42",
     "codelyzer": "^5.1.2",
+    "isbn-util": "^1.1.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.4.1",
