--- a/bstore-server/src/main/resources/application.properties
+++ b/bstore-server/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.jpa.properties.javax.persistence.schema-generation.create-source=script
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=schema.sql
 
 #Generate Database
-spring.jpa.properties.javax.persistence.schema-generation.database.action=create
+spring.jpa.properties.javax.persistence.schema-generation.database.action=drop-and-create
 spring.jpa.properties.javax.persistence.schema-generation.create-script-source=create.sql
 spring.jpa.properties.javax.persistence.schema-generation.create-database-schemas=true
 spring.jpa.properties.javax.persistence.schema-generation.create-database-tables=true
