--- a/bstore-front/package.json
+++ b/bstore-front/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bookstore-front",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -34,8 +34,8 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.7",
-    "@angular/cli": "~9.1.1",
+    "@angular-devkit/build-angular": "^0.1100.5",
+    "@angular/cli": "^11.0.5",
     "@angular/compiler-cli": "~9.1.1",
     "@angular/language-service": "~9.1.1",
     "@types/jasmine": "~3.5.0",
