fixed double requests from cart, invoice wip

--- a/bstore-server/src/main/resources/application.properties
+++ b/bstore-server/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.username=postgres
 spring.datasource.password=pgadmin
 spring.datasource.initialization-mode=always
 
+invoice.template.path=/test_template.jrxml
 
 #create SQL from Entity Metadata only, don't use scripts
 spring.jpa.properties.javax.persistence.schema-generation.create-source=script
