--- a/bstore-front/package.json
+++ b/bstore-front/package.json
@@ -25,6 +25,7 @@
     "@ngrx/entity": "^9.1.2",
     "@ngrx/store": "^9.1.2",
     "@ngrx/store-devtools": "^9.1.2",
+    "file-saver": "^2.0.5",
     "isbn-validate": "^1.0.3",
     "isbn-validator": "^1.2.0",
     "isbnjs": "^0.2.2",
